--- a/templates/partials/page/person.html
+++ b/templates/partials/page/person.html
@@ -1,5 +1,5 @@
 <div class="flex justify-center">
-    <div class="bg-white shadow rounded-lg p-4 sm:w-full xl:p-8 md:w-full lg:w-10/12 xl:w-8/12 2xl:w-6/12">
+    <div class="bg-white shadow rounded-lg p-4 sm:w-full xl:p-8 md:w-full lg:w-11/12">
 
         <div class="mb-4 flex items-center justify-between">
             <div>
