--- a/templates/partials/page/dashboard.html
+++ b/templates/partials/page/dashboard.html
@@ -19,7 +19,7 @@
                 <span class="text-base font-normal text-gray-500">Current rep maxes</span>
             </div>
             <div class="flex-shrink-0">
-                <a hx-get="{{ url_for('get_person' ,person_id=p['PersonId']) }}" hx-push-url="true"
+                <a hx-get="{{ url_for('get_calendar' ,person_id=p['PersonId']) }}" hx-push-url="true"
                     hx-target="#container"
                     class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg p-2 cursor-pointer">View
                     workouts</a>
