--- a/templates/partials/workout_modal.html
+++ b/templates/partials/workout_modal.html
@@ -77,7 +77,7 @@
                     <form class="w-full max-w-lg"
                         hx-post="{{ url_for('create_topset', person_id=workout['PersonId'], workout_id=workout['WorkoutId']) }}"
                         hx-swap="beforeend" hx-target="#new-workout"
-                        _="on htmx:afterOnLoad add .hidden to #no-workouts">
+                        _="on htmx:afterOnLoad if #no-workouts add .hidden to #no-workouts">
 
                         <div class="flex flex-wrap -mx-3 mb-2">
                             <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
@@ -134,7 +134,7 @@
 
                             <button
                                 hx-delete="{{ url_for('delete_workout', person_id=workout['PersonId'], workout_id=workout['WorkoutId']) }}"
-                                hx-target="#container"
+                                _='on click trigger closeModal'
                                 class="sm:inline-flex text-white bg-red-200 hover:bg-red-700 focus:ring-4 focus:ring-red-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center items-center  cursor-pointer">Delete
                                 workout</button>
                         </div>
