--- a/templates/partials/workout_modal.html
+++ b/templates/partials/workout_modal.html
@@ -2,7 +2,8 @@
 					add .closing
 					then wait for animationend 
 					then remove me
-					then toggle .hide-scrollbar on document.body'>
+					then toggle .hide-scrollbar on document.body
+                    then send refreshView to #refreshViewElement'>
     <div class='modal-underlay' _='on click trigger closeModal'></div>
     <div class='modal-content' _='init toggle .hide-scrollbar on document.body'>
         <div class="relative w-full h-full max-w-2xl md:h-auto">
