--- a/templates/partials/page/person.html
+++ b/templates/partials/page/person.html
@@ -110,7 +110,7 @@
 
                                 {% for w in person['Workouts'] %}
                                 <tr hx-get="{{ url_for('get_workout_modal', person_id=person['PersonId'], workout_id=w['WorkoutId']) }}"
-                                    hx-target='body' hx-swap='beforeend'>
+                                    hx-target='body' hx-swap='beforeend' class="cursor-pointer">
                                     <td class="p-4 whitespace-nowrap text-sm font-normal text-gray-500">
                                         {{ strftime(w['StartDate'], "%b %d %Y") }}
                                     </td>
