--- a/templates/partials/people_link.html
+++ b/templates/partials/people_link.html
@@ -1,7 +1,8 @@
 {% for p in people %}
 <li>
-    <a hx-get="{{ url_for('get_calendar' ,person_id=p['PersonId']) }}" hx-push-url="true" hx-target="#container" class="text-base text-gray-900 font-normal rounded-lg hover:bg-gray-100 flex items-center p-2 group cursor-pointer {% if
-    p['IsActive']==1 %} bg-gray-200 {% endif %}">
+    <a hx-get="{{ url_for('get_calendar' ,person_id=p['PersonId']) }}" hx-push-url="true" hx-target="#container"
+        class="text-base text-gray-900 font-normal rounded-lg hover:bg-gray-100 flex items-center p-2 group cursor-pointer {% if
+    p['IsActive']==1 %} bg-gray-200 {% endif %} {{ is_selected_page(url_for('get_calendar' ,person_id=p['PersonId'])) }}">
         <svg class="w-6 h-6 text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75"
             fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd">
