--- a/templates/partials/person.html
+++ b/templates/partials/person.html
@@ -15,6 +15,7 @@
             Edit
         </a>
         <a hx-delete="{{ url_for('delete_person', person_id=person_id) }}"
+            hx-confirm="Are you sure you wish to delete {{ name  }} from users?"
             class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2 cursor-pointer">
             Remove
         </a>
