--- a/templates/partials/workout_modal.html
+++ b/templates/partials/workout_modal.html
@@ -134,7 +134,7 @@
                                 Add top set
                             </button>
 
-                            <button
+                            <button hx-confirm="Are you sure you wish to delete this workout?"
                                 hx-delete="{{ url_for('delete_workout', person_id=workout['PersonId'], workout_id=workout['WorkoutId']) }}"
                                 _='on click trigger closeModal'
                                 class="sm:inline-flex text-white bg-red-200 hover:bg-red-700 focus:ring-4 focus:ring-red-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center items-center  cursor-pointer">Delete
