--- a/templates/partials/exercise.html
+++ b/templates/partials/exercise.html
@@ -15,6 +15,7 @@
             Edit
         </a>
         <a hx-delete="{{ url_for('delete_exercise', exercise_id=exercise_id) }}"
+            hx-confirm="Are you sure you wish to delete {{ name }} from exercises?"
             class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2 cursor-pointer">
             Remove
         </a>
